--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e595952d-dfc4-41bb-b829-c5f4b7f1fc64",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "import numpy\n",
+    "import numpy as np\n",
     "print(\" successful\")"
    ]
   },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "9513befb-70d7-4e7e-9a7a-24a67ac53486",
    "metadata": {},
    "outputs": [
@@ -161,6 +161,7 @@
     }
    ],
    "source": [
+    "#123\n",
     "import numpy as np\n",
     "\n",
     "list1 = [[10,20],[30,40],[50,60]]\n",
